tests/testthat/fixtures/parse-errors/error-ok.qmd
---
title: "Parse Errors OK"
format: html
---

```{r}
#| error: true

# C1: this should give a parse error, but still render
library(dplyr

a <- 1 + 1
```
